--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,3 +1,8 @@
 {
-    "welcome": "Добро пожаловать в бота"
+    "welcome": "Добро пожаловать в бота",
+    "language": {
+        "title": "🇺🇿 Iltimos, tilni tanlang\n🇷🇺 Пожалуйста, выберите язык",
+        "success": "✅ Язык выбран"
+    },
+    "test": "Test ru"
 }
